test/parsing/errors/multipleManagementStrategies.chpl
class Foo {}
var a : Foo = new owned owned Foo();
